--- a/studio/tsconfig.web.json
+++ b/studio/tsconfig.web.json
@@ -10,6 +10,7 @@
     "composite": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
+    "esModuleInterop": true,
     "paths": {
       "@/*": [
         "./src/renderer/src/*"
