--- a/studio/dev-app-update.yml
+++ b/studio/dev-app-update.yml
@@ -1,3 +1,3 @@
 provider: generic
-url: https://example.com/auto-updates
-updaterCacheDirName: shadcn-electron-app-updater
+url: https://your-update-server.com/updates/
+updaterCacheDirName: gamepot-studio-updater
