--- a/studio/tsconfig.node.json
+++ b/studio/tsconfig.node.json
@@ -4,5 +4,7 @@
   "compilerOptions": {
     "composite": true,
     "types": ["electron-vite/node"],
-  }
+  },
+  "noUnusedLocals": false,
+  "noUnusedParameters": false
 }
