--- a/studio/tsconfig.json
+++ b/studio/tsconfig.json
@@ -7,6 +7,8 @@
      "@/*": [
         "./src/renderer/src/*"
       ]
-    }
+    },
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   }
 }
